--- a/DEMONSTRATION OF CREATIVE WEB DESIGN PORTFOLIO/SCIENCE LEARNING/index.html
+++ b/DEMONSTRATION OF CREATIVE WEB DESIGN PORTFOLIO/SCIENCE LEARNING/index.html
@@ -10,7 +10,7 @@
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
-    <title>HOME PAGE</title>
+    <title>Science Learning</title>
 
 </head>
     <style>
